<resources>
    <string name="app_name">Cardio Analyst</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_name_example">TabNameExample</string>
    <string name="logo_name_first">Карди</string>
    <string name="logo_name_second">Аналитик</string>
    <string name="password_text">Пароль</string>
    <string name="email_or_login_text">Почта или логин</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="name_text">ФИО</string>
    <string name="region_text">Регион проживания</string>
    <string name="email_text">Почта</string>
    <string name="email_doctor_text">Почта врача (не обязательно)</string>
    <string name="login_text">Логин</string>
    <string name="birth_date_text">Дата рождения</string>
    <string name="choose_region_text">Выберите регион</string>
    <string name="send_to_myself_text">Отправить себе на почту</string>
    <string name="share_text">Поделиться</string>
    <string name="send_to_email_text">Отправка отчета на почту</string>
    <string name="cvdPredisposed">Наличие сердечно сосудистых заболеваний у ближайших родственников в возрасте до 70 лет</string>
    <string name="takesStatins">Прием статинов</string>
    <string name="hasChronicKidneyDisease">Хроническая болезнь почек</string>
    <string name="hasArterialHypertension">Артериальная гипертония</string>
    <string name="hasIschemicHeartDisease">Ишемическая болезнь сердца</string>
    <string name="hasTypeTwoDiabetes">Сахарный диабет 2 типа</string>
    <string name="hadInfarctionOrStroke">Инфаркт миокарда</string>
    <string name="hasAtherosclerosis">Инсульт</string>
    <string name="hasOtherCVD">Атеросклероз</string>
    <string name="basic_indicators_default_tooltip">Заполните и сохраните текущие показатели сердечно-сосудистого здоровья</string>
    <string name="weight">Вес</string>
    <string name="height">Рост</string>
    <string name="body_mass_index_BMI">Вычисленный индекс массы тела (ИМТ)</string>
    <string name="waist">Объем талии</string>
    <string name="gender">Пол</string>
    <string name="systolic_blood_pressure_level">Уровень систолического АД</string>
    <string name="smoking">Курение</string>
    <string name="total_cholesterol">Общий холестерин</string>
    <string name="risk_of_cardiovascular_events">Риск сердечно-сосудистых событий в течение 10 лет по шкале SCORE</string>
    <string name="risk_of_cardiovascular_description">Хорошее значение для вашего возраста отображаются зеленым цветом\nПриемлемые значения - желтым цветом\nКрасным цветом обозначаются тревожные значения риска, если система расчитала такое значение, рекомендуем изменить ваш образ жизни</string>
    <string name="ideal_cardiovascular_age">Ваш сердечно-сосудистый возраст</string>
    <string name="ideal_cardiovascular_age_description">Возраст человека - это возраст его сосудов \nЧем сильнее показатель сердечно-сосудистого возраста старше вашего истинного возраста, тем серъезнее вам нужно задуматься о своем здоровье</string>
    <string name="choose_gender">Укажите свой пол</string>
    <string name="genderMan">Мужской</string>
    <string name="genderWoman">Женский</string>
    <string name="unit_sm">см</string>
    <string name="unit_kg">кг</string>
    <string name="unit_mm_rt_st">мм.рт.ст</string>
    <string name="family_status_text">Семейное положение</string>
    <string name="event_participation">Участие в социально-культурных мероприятиях</string>
    <string name="physical_activity">Физическая активность</string>
    <string name="job_status">Работа</string>
    <string name="significant_value_high">Самая значимая ценность для вас</string>
    <string name="significant_value_medium">Наиболее значимая ценность для вас</string>
    <string name="significant_value_low">Значимая ценность для вас</string>
    <string name="angina_symptoms">Симптомы стенокардии</string>
    <string name="treatment_adherence">Приверженность лечению</string>
    <string name="test_results">Результаты тестирования</string>
    <string name="result">Результат</string>
    <string name="choose_family_status_text">Выберите семейное положение</string>
    <string name="choose_event_participation">Выберите как часто вы участвуете в социально-культурных мероприятиях</string>
    <string name="choose_physical_activity">Выберите как часто вы занимаетесь физической активностью</string>
    <string name="choose_job_status">Укажите ваш социальный статус</string>
    <string name="choose_significant_value_high">Выберите САМУЮ ЗНАЧИМУЮ ценность для вас</string>
    <string name="choose_significant_value_medium">Выберите НАИБОЛЕЕ ЗНАЧИМУЮ ценность для вас</string>
    <string name="choose_significant_value_low">Выберите ЗНАЧИМУЮ ценность для вас</string>
    <string name="default_option_not_choosing">Не выбрано</string>
    <string name="default_option_not_passed">Не пройдено</string>
    <string name="family_status_married">Замужем / женат</string>
    <string name="family_status_not_married">Не Замужем / не женат</string>
    <string name="family_status_divorced">Разведен / разведена</string>
    <string name="family_status_widower">Вдовец / вдова</string>
    <string name="event_participation_one_in_week">1 раз в неделю</string>
    <string name="event_participation_more_than_one_in_week">Более 1 раза в неделю</string>
    <string name="physical_activity_one_in_week">Тренировка 1 раз в неделю</string>
    <string name="physical_activity_more_than_one_in_week">Тренировка более 1 раза в неделю</string>
    <string name="physical_activity_one_in_day">Тренировка раз в день</string>
    <string name="work_status_worker">Работаю</string>
    <string name="work_status_unemployed">Безработный</string>
    <string name="work_status_looking_for_job">В поиске работы</string>
    <string name="work_status_pensioner">Пенсионер</string>
    <string name="angina_symptoms_no_symptoms">Нет симптомов</string>
    <string name="angina_symptoms_symptoms">Необходимо записаться к кардиологу</string>
    <string name="treatment_adherence_low">Низкая</string>
    <string name="treatment_adherence_medium">Средняя</string>
    <string name="treatment_adherence_high">Высокая</string>
    <string name="treatment_adherence_test_result">Приверженность лечению\n%s\n\nПриверженность лекарственной терапии\n%s\n\nПриверженность медицинскому сопровождению\n%s\n\nПриверженность модификации образа жизни\n%s</string>
    <string name="life_values_active_life">Активная деятельная жизнь</string>
    <string name="life_values_life_wisdom">Жизненная мудрость</string>
    <string name="life_values_health">Здоровье</string>
    <string name="life_values_interesting_job">Интересная работа</string>
    <string name="life_values_beauty_of_nature_and_art">Красота природы и искусства</string>
    <string name="life_values_love">Любовь</string>
    <string name="life_values_financially_secure_life">Материально обеспеченная жизнь</string>
    <string name="life_values_having_good_and_true_friends">Наличие хороших и верных друзей</string>
    <string name="life_values_public_vocation">Общественное признание</string>
    <string name="life_values_knowledge_and_intellectual_development">Познание и интеллектуальное развитие</string>
    <string name="life_values_productive_life">Продуктивная жизнь</string>
    <string name="life_values_entertainment">Развлечения</string>
    <string name="life_values_autonomy">Свобода, самостоятельность, независимость</string>
    <string name="life_values_happy_family_life">Счастливая семейная жизнь</string>
    <string name="life_values_creativity">Творчество</string>
    <string name="life_values_self_confidence">Уверенность в себе</string>
    <string name="stenocardia_question_1">1. Бывает ли у Вас боль или неприятное ощущение в грудной клетке?</string>
    <string name="stenocardia_question_2">2. Возникает ли эта боль, когда Вы идете в гору, поднимаетесь по лестнице или спешите?</string>
    <string name="stenocardia_question_3">3. Возникает ли эта боль при ходьбе обычным шагом по ровному месту?</string>
    <string name="stenocardia_question_4">4. Что Вы делаете, если боль (неприятное ощущение) возникает во время ходьбы?</string>
    <string name="stenocardia_question_5">5. Если Вы останавливаетесь или принимаете нитроглицерин, что происходит с болью?</string>
    <string name="stenocardia_question_6">6. Как быстро проходит боль?</string>
    <string name="stenocardia_question_7">7. Можете ли Вы сказать, где её ощущаете?</string>
    <string name="stenocardia_question_8">8. Вы обращались по поводу этих болей к врачу?</string>
    <string name="stenocardia_question_9">9. Когда впервые появились эти боли?</string>
    <string name="stenocardia_question_10">10. Как часто они возникают в течение последнего месяца?</string>
    <string name="stenocardia_question_11">11. Изменился ли их характер в течение последнего месяца?</string>
    <string name="stenocardia_answer_yes">Да</string>
    <string name="stenocardia_answer_no">Нет</string>
    <string name="stenocardia_answer_never_walk_fast_and_climb_a_mountain">Никогда не хожу быстро и не поднимаюсь в гору</string>
    <string name="stenocardia_answer_stop_or_go_slower">Останавливаюсь или иду медленнее.</string>
    <string name="stenocardia_answer_keep_going">Продолжаю идти, не снижая темпа.</string>
    <string name="stenocardia_answer_take_nitroglycerin_or_medications">Принимаю нитроглицерин или другие препараты.</string>
    <string name="stenocardia_answer_pain_disappears_or_decreases">Боль исчезает или уменьшается.</string>
    <string name="stenocardia_answer_pain_does_not_disappear">Боль не исчезает.</string>
    <string name="stenocardia_answer_after_10_15_minutes_or_faster">Через 10–15 минут или быстрее.</string>
    <string name="stenocardia_answer_more_10_minutes_later">Более чем через 10 минут.</string>
    <string name="stenocardia_answer_sternum_upper_or_middle_third">Грудина (верхняя или средняя треть).</string>
    <string name="stenocardia_answer_sternum_lower_third">Грудина (нижняя треть).</string>
    <string name="stenocardia_answer_left_side_chest_front">Левая сторона грудной клетки спереди.</string>
    <string name="stenocardia_answer_left_hand">Левая рука.</string>
    <string name="stenocardia_answer_other_areas">Другие области.</string>
    <string name="stenocardia_answer_less_4_week">Менее 4 недель назад.</string>
    <string name="stenocardia_answer_less_1_month">Более 1 месяца назад.</string>
    <string name="stenocardia_answer_less_2_week">Менее 2 раз в неделю.</string>
    <string name="stenocardia_answer_almost_every_day">Почти каждый день.</string>
    <string name="treatment_adherence_question_1">1. Врач выявил у вас хроническую болезнь. Важно ли вам знать, какими признаками она проявляется?</string>
    <string name="treatment_adherence_question_2">2. Врач назначил вам лекарство, которое нужно принимать каждый день в течение многих лет. Насколько сложно для вас выполнять эту рекомендацию?</string>
    <string name="treatment_adherence_question_3">3. Врач назначил вам лекарство, которое нужно принимать несколько раз в день в течение многих лет. Насколько сложно для вас выполнять эту рекомендацию?</string>
    <string name="button_text_cancel">Отмена</string>
    <string name="button_text_start_test">Начать тестирование</string>
    <string name="button_text_send">Отправить</string>
    <string name="title_diseases">Заболевания</string>
    <string name="title_basic_indicators">Сердечно-сосудистые показатели</string>
    <string name="title_lifestyle">Образ жизни</string>
    <string name="title_laboratory_research">Дополнительно</string>
    <string name="title_recommendation">Рекомендации</string>
</resources>