<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/shareTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/enter_color"
        android:textSize="@dimen/text_large"
        android:textAlignment="center"
        android:text="@string/share_text"/>

    <TextView
        android:id="@+id/sendToEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:textAlignment="center"
        android:text="@string/send_to_email_text"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/emailTextView"
        android:text="@string/email_doctor_text"
        style="@style/textViewHint"
        android:layout_marginTop="80dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="8dp"
        style="@style/textEdit"/>

    <CheckBox
        android:id="@+id/isSendUserEmailCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginVertical="12dp"
        android:text="@string/send_to_myself_text"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="@string/button_text_send"
        style="@style/button_simple"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/cancelTextView"
        android:text="@string/button_text_cancel"
        style="@style/textViewHint"
        android:layout_marginStart="0dp"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>