<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/nameTextView"
        style="@style/textViewHintLaboratoryResearch"
        android:text="@string/angina_symptoms"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/enter_color"
        android:textSize="@dimen/text_large"
        android:minHeight="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/resultTextView"
        android:maxWidth="150dp"
        style="@style/textViewHintLaboratoryResearch"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="24dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"/>

    <TextView
        android:id="@+id/valueTextView"
        android:layout_width="0dp"
        style="@style/textViewHintProfile"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="end"
        android:enabled="true"
        android:text="@string/treatment_adherence_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resultTextView"
        app:layout_constraintTop_toTopOf="@+id/resultTextView"
        app:layout_constraintBottom_toBottomOf="@+id/resultTextView" />

    <Button
        android:id="@+id/startTestButton"
        android:text="@string/button_text_start_test"
        style="@style/button_positive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>