<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/logo_layout"/>

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_round_background"
        android:backgroundTint="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:text="@string/welcome_text"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintBottom_toTopOf="@id/emailTextView"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        style="@style/textViewHint"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/emailTextView"
        android:text="@string/email_text"
        app:layout_constraintBottom_toTopOf="@id/emailTextEdit"
        app:layout_constraintStart_toStartOf="@id/emailTextEdit"
        style="@style/textViewHint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/loginTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        android:inputType="textEmailAddress"
        style="@style/textEdit"/>

    <TextView
        android:id="@+id/loginTextView"
        android:text="@string/login_text"
        app:layout_constraintBottom_toTopOf="@id/loginTextEdit"
        app:layout_constraintStart_toStartOf="@id/loginTextEdit"
        style="@style/textViewHint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        android:inputType="textNoSuggestions"
        style="@style/textEdit"/>

    <TextView
        android:id="@+id/nameTextView"
        android:text="@string/name_text"
        app:layout_constraintBottom_toTopOf="@id/nameTextEdit"
        app:layout_constraintStart_toStartOf="@id/nameTextEdit"
        style="@style/textViewHint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/birthDateTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        android:inputType="textPersonName"
        style="@style/textEdit"/>

    <TextView
        android:id="@+id/birthDateTextView"
        android:text="@string/birth_date_text"
        app:layout_constraintBottom_toTopOf="@id/birthDateTextEdit"
        app:layout_constraintStart_toStartOf="@id/birthDateTextEdit"
        style="@style/textViewHint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/birthDateTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/regionTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        android:inputType="date"
        style="@style/textEdit"/>

    <TextView
        android:id="@+id/regionTextView"
        android:text="@string/region_text"
        app:layout_constraintBottom_toTopOf="@id/regionTextViewAlert"
        app:layout_constraintStart_toStartOf="@id/regionTextViewAlert"
        style="@style/textViewHint" />

    <TextView
        android:id="@+id/regionTextViewAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        android:gravity="center_vertical"
        style="@style/textEdit"/>

    <!--<Spinner
        android:id="@+id/regionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        android:background="@drawable/background_spinner"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:minHeight="40dp"
        />-->

    <TextView
        android:id="@+id/passwordTextView"
        android:text="@string/password_text"
        app:layout_constraintBottom_toTopOf="@id/passwordTextEdit"
        app:layout_constraintStart_toStartOf="@id/passwordTextEdit"
        style="@style/textViewHint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/registrationButton"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        android:ems="10"
        android:inputType="textPassword"
        style="@style/textEdit"/>

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/register_text_button"
        android:textColor="@color/enter_color"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintVertical_bias="0.97"/>

    <is.ulstu.foundation.views.ResultView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>