<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:background="@drawable/top_round_background"
    android:backgroundTint="@color/white">

    <include layout="@layout/logo_layout" />

    <TextView
        android:id="@+id/emailTextView"
        style="@style/textViewHintProfile"
        android:layout_marginStart="24dp"
        android:text="@string/email_text"
        app:layout_constraintBottom_toTopOf="@id/loginTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/loginTextView"
        style="@style/textViewHintProfile"
        android:text="@string/login_text"
        app:layout_constraintBottom_toTopOf="@id/nameTextView"
        app:layout_constraintStart_toStartOf="@id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <TextView
        android:id="@+id/nameTextView"
        style="@style/textViewHintProfile"
        android:text="@string/name_text"
        app:layout_constraintBottom_toTopOf="@id/birthDateTextView"
        app:layout_constraintStart_toStartOf="@id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <TextView
        android:id="@+id/birthDateTextView"
        style="@style/textViewHintProfile"
        android:text="@string/birth_date_text"
        app:layout_constraintBottom_toTopOf="@id/regionTextView"
        app:layout_constraintStart_toStartOf="@id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/regionTextView"
        style="@style/textViewHintProfile"
        android:layout_marginStart="0dp"
        android:text="@string/region_text"
        app:layout_constraintBottom_toTopOf="@id/passwordTextView"
        app:layout_constraintStart_toStartOf="@id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/birthDateTextView" />

    <TextView
        android:id="@+id/passwordTextView"
        style="@style/textViewHintProfile"
        android:text="@string/password_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/regionTextView" />

    <EditText
        android:id="@+id/emailTextEdit"
        style="@style/textViewHintProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:layout_marginEnd="24dp"
        android:background="@null"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:text="example@email.com"
        android:textColor="@color/enter_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/loginTextEdit"
        style="@style/textViewHintProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:background="@null"
        android:imeOptions="actionDone"
        android:text="Login123"
        android:textColor="@color/enter_color"
        app:layout_constraintEnd_toEndOf="@+id/emailTextEdit"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/nameTextEdit"
        style="@style/textViewHintProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:background="@null"
        android:imeOptions="actionDone"
        android:text="Иванов Иван Иванович"
        android:textColor="@color/enter_color"
        app:layout_constraintEnd_toEndOf="@+id/loginTextEdit"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/birthDateTextEdit"
        style="@style/textViewHintProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:background="@null"
        android:imeOptions="actionDone"
        android:text="01.01.2000"
        android:textColor="@color/enter_color"
        app:layout_constraintEnd_toEndOf="@+id/nameTextEdit"
        app:layout_constraintTop_toBottomOf="@+id/birthDateTextView"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/regionTextViewAlert"
        style="@style/textViewHintProfile"
        android:layout_marginTop="-8dp"
        android:text="Регион"
        android:textColor="@color/enter_color"
        app:layout_constraintEnd_toEndOf="@+id/birthDateTextEdit"
        app:layout_constraintTop_toBottomOf="@+id/regionTextView" />

    <EditText
        android:id="@+id/passwordTextEdit"
        style="@style/textViewHintProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:background="@null"
        android:imeOptions="actionDone"
        android:text="password"
        android:inputType="textPassword"
        android:textColor="@color/enter_color"
        app:layout_constraintEnd_toEndOf="@+id/nameTextEdit"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/changeAndSaveButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/enter_color"
        android:text="@string/change_button_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>